<resources>
    <string name="app_name">Lamianota</string>
    <string name="account">Account</string>
    <string name="message_add">One Item successfully added</string>
    <string name="message_update">One Item successfully changed</string>
    <string name="warning_delete">One Item successfully deleted</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="change_date">Change Date</string>
    <string name="change_time">Change Time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date_format_in">dd/MM/yyyy</string>
    <string name="date_format_out">EEEE, dd MMM yyyy</string>
    <string name="message_cancel">Do you want to cancel the change?</string>
    <string name="message_delete">Are you sure to delete this item?</string>
    <string name="sign">Sign</string>
    <string name="please_signup"><u>Please SignUp</u></string>
    <string name="password">Password</string>
    <string name="welcome_to_lamianota">Welcome to Lamianota</string>
    <string name="in">In</string>
    <string name="sign_in">Sign In</string>
    <string name="try_again">Try Again</string>
    <string name="don_not_have_an_account">Don\'t have an account?&#160;</string>
    <string name="up">Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an account?&#160;</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="error_empty_field">This field cannot be empty</string>
    <string name="error_email_not_correct">Please enter the correct email</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_password_min_8_char">Password is must be 8 character minimum</string>
    <string name="error_confirm_empty_password">Confirm Password cannot be empty</string>
    <string name="error_password_not_match">Error! Password not match!</string>
    <string name="auth_error">Authentication Failed</string>
    <string name="auth_success">Authentication Success</string>
    <string name="create_user_error">Create User is Failed</string>
    <string name="create_user_success">Create User is Success</string>
    <string name="sign_out_success">Sign Out Success</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="sign_up">Sign Up</string>
    <string name="minimum_passsword_character">Minimum 8 character</string>
    <string name="helper_text_confirm_password">Must be the same as the password column</string>
    <string name="edit">Edit</string>
    <string name="backup">Backup</string>
    <string name="share">Share</string>
    <string name="rp">$.&#160;</string>
    <string name="source">Source:&#160;</string>
    <string name="needs">Needs:&#160;</string>
    <string name="delete_task">Delete this task?</string>
    <string name="remem">Remem</string>
    <string name="ber">ber</string>
    <string name="welcome_message_remember_activity">Please complete the following box for Remember your password</string>
    <string name="email_user">Email User</string>
    <string name="send">Send</string>
    <string name="remember">Remember</string>
    <string name="your_request_is_success">Your Request is Successful</string>
    <string name="your_request_is_failed">Your Request is Failed</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="income">Income</string>
    <string name="spending">Spending</string>
    <string name="please_choose_date">Please choose date</string>
    <string name="note">Note</string>
    <string name="keuangan">Cash Flow</string>
    <string name="sign_out">Sign Out</string>
    <string name="account_info">Account Info</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile">Profile</string>
    <string name="profile_update_success">Profile Update Successful</string>
</resources>