<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.note.insert.InsertUpdateNoteActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_note_input_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        app:startIconDrawable="@drawable/ic_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_note_input_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:startIconDrawable="@drawable/ic_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_input_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="8"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_date_picker"
        app:icon="@drawable/ic_date_range"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_note_input_description" />

    <TextView
        android:id="@+id/tv_date_picker"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_date_picker"
        tools:text="Date" />

    <Button
        android:id="@+id/btn_time_picker"
        app:icon="@drawable/ic_timer"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_picker" />

    <TextView
        android:id="@+id/tv_time_picker"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_time_picker"
        tools:text="Time" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_set_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/set_reminder"
        app:useMaterialThemeColors="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_time_picker"
        app:layout_constraintStart_toStartOf="@+id/btn_time_picker"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_picker" />

    <Button
        android:id="@+id/btn_save_note"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:icon="@drawable/ic_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_set_reminder" />
</androidx.constraintlayout.widget.ConstraintLayout>