<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.profile.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/headerText"
            android:layout_marginBottom="20dp"
            android:text="@string/account_info" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:endIconTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeErrorColor="@android:color/holo_red_light"
            app:hintTextColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_welcome"
            app:startIconDrawable="@drawable/ic_profile_user_24"
            app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:endIconTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeErrorColor="@android:color/holo_red_light"
            app:hintTextColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_welcome"
            app:startIconDrawable="@drawable/ic_telephone"
            app:startIconTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_info_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:endIconTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeErrorColor="@android:color/holo_red_light"
            app:hintTextColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_welcome"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_info_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:endIconMode="password_toggle"
            app:endIconDrawable="@drawable/ic_password_visible"
            app:endIconTint="@color/colorWhite"
            app:boxStrokeColor="@color/colorAccent"
            app:helperText="@string/minimum_passsword_character"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/colorAccent"
            app:boxStrokeErrorColor="@android:color/holo_red_light"
            app:hintTextColor="@color/colorWhite"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_info_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeErrorColor="@android:color/holo_red_light"
            app:endIconDrawable="@drawable/ic_password_visible"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorWhite"
            app:hintTextColor="@color/colorWhite"
            app:helperText="@string/helper_text_confirm_password"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/colorAccent"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_info_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save_profile"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            app:backgroundTint="@color/colorAccent"
            app:icon="@drawable/ic_save" />

        <Button
            android:id="@+id/btn_sign_out"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="16dp"
            android:text="@string/sign_out"
            app:backgroundTint="@android:color/holo_red_dark"
            app:icon="@drawable/ic_logout" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>