<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.auth.signin.SigninActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_1"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/sign"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

    <TextView
        android:id="@+id/tv_login_2"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="monospace"
        android:text="@string/in"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_1"
        app:layout_constraintStart_toEndOf="@+id/tv_login_1"
        app:layout_constraintTop_toTopOf="@+id/tv_login_1" />

    <ProgressBar
        android:id="@+id/progressbar_sign_in"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:max="100"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_1" />

    <TextView
        android:id="@+id/tv_login_welcome"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/welcome_to_lamianota"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_login_1"
        app:layout_constraintTop_toBottomOf="@+id/progressbar_sign_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_sign_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/ic_cancel"
        app:endIconTint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:boxStrokeColor="@color/colorAccent"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_welcome"
        app:startIconDrawable="@drawable/ic_profile_user_24"
        app:startIconTint="@color/colorWhite">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value_sign_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_sign_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/password"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/ic_password_visible"
        app:endIconTint="@color/colorWhite"
        app:boxStrokeColor="@color/colorAccent"
        app:helperText="@string/minimum_passsword_character"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/colorAccent"
        app:boxStrokeErrorColor="@android:color/holo_red_light"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_sign_email"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/colorWhite">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value_sign_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signin"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_btn"
        android:backgroundTintMode="screen"
        android:text="@string/sign_in"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_sign_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_goto_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/tv_goto_remember"
        app:layout_constraintStart_toStartOf="@+id/tv_goto_remember"
        app:layout_constraintTop_toBottomOf="@+id/tv_goto_remember" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_goto_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/don_not_have_an_account"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/goto_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_signup"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_goto_signup"
        app:layout_constraintStart_toEndOf="@+id/tv_goto_signup"
        app:layout_constraintTop_toTopOf="@+id/tv_goto_signup" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_wave" />

</androidx.constraintlayout.widget.ConstraintLayout>